css/style.css
/*-----------------Css for finn app Opplevelser------------------------*/





/*-
--- Main styles used all over the app
--- Style used in Index page
--- Style used in opplevelser start page
---
---
---
-*/

body{
    font-family: "helvetica";
    font-weight: 100;
}



/*---------------Used in the main content style of the header footer and style-------------------*/
p{
    font-family: "helvetica";
    font-weight: 100;
    font-size: 14px;
}

    #mainContainer{
        margin-top: 50px;
        border: 2px solid black;
        width: 320px;
        height: 100%;
        margin-right: auto;
        margin-left: auto;
        overflow: auto;

    }
    #head{
        width: 320px;
        height: 68px;
        background-color: rgb(37, 120, 250);
    }

    .finnLogo{
        display: block;
        width: 60px;
        margin-left: auto;
        margin-right: auto;
        padding-top: 33px;
    }

    #mainContent{
        width: 320px;
        height: 432px;
        overflow: auto;
    }

    #foot{
        width: 320px;
        height: 68px;
        background-color: rgb(37, 120, 250);
        margin-left: auto;
        margin-right: auto;
    }

    .navIcons{
        position: relative;
        padding-left: 29px;
        top: 17.5px;
        height: 44px;
    }

    .headerIcons{
        position: relative;
        margin-top: 1px;
        padding: 10px;
        width: 25px;
        float: right;
    }

    .headerTop{
        background-image: url(../img/header_statuslinje.png);
        background-repeat: no-repeat;
        background-size: 100%;
    }

    .opplevelserIcons{
        float: left;
        width: 49.5%;
        padding: 0;
        margin: 0;
    }
    .spaceTop{
        height: 50px;
    }



/*---------------Search bar style--------------------------*/
        input[type=search] {
            background: url(../img/sok_header.png) no-repeat;
            background-size: 33px;
            border: none;
            padding: 4px 6px 4px 32px;
            width: 33px;
            height: 33px;

            -webkit-transition: all .5s;
            -moz-transition: all .5s;
            transition: all .5s;
        }

        input[type=search]:focus {
            width: 310px;
            padding-left: 40px;
            color: #fff;
            background-color: #257afb;
            cursor: auto;
        }

        input:-moz-placeholder {
	       color: transparent;
        }
        input::-webkit-input-placeholder {
	       color: transparent;
        }

        textarea:focus, input:focus{
            outline: none;
        }

/*------------------kent, minKamp, inferno, boSommarland-----------------------*/
#kent, #minKamp, #scene, #inferno, #boSommarland, #kart{
    width: 320px;
}

#txtBox{
    margin-left: 15px;
    margin-right: 15px;
}
.ticketBtn{
    background-color: rgb(37, 120, 250);
}
.ticketBtnDiv{
    text-align: center;
}
.eventPlace, .eventTime, .movieAge{
    font-size: 10px;
    width: auto;
}
/*------------------end kent, minKamp, inferno, boSommarland-----------------------*/

/*------------------kentAntallBill, minKampAntallBill, infernoAntallBill, boSommarlandAntallBill-----------------------*/
.ticketBtn, .buyTicketBtn{
    width: 150px;
    color: rgb(255, 255, 255);
    margin-bottom: 30px;
    border: none;
    padding: 10px 10px;
    text-decoration: none;
    display: inline-block;
    font-size: 14px;
    cursor: pointer;
}
.buyTicketBtn{
    background-color: #4CAF50;
}
.nrSelect{
    margin-bottom: 20px;
}
#datepicker{
    background-color: rgb(255, 255, 255);
}
/*------------------end kentAntallBill, minKampAntallBill, infernoAntallBill, boSommarlandAntallBill-----------------------*/


/*-----------------------------------------*/
/*-----------------------------------------*/
/*-----------------------------------------*/
/*-----------------------------------------*/
/*-----------------------------------------*/

/*------------------Dine biletter payment page-----------------------*/

.priceTitle{
    text-align: center;
}

.priceBox{
    margin: auto;
    width: 60%;
    border: 2px solid black;
    text-align: center;
}

.wayOfPayment{
    margin: auto;
    width: 80%;
    border-bottom: 2px solid black;
    border-top: 2px solid black;

}

.showDetailsPayment{
    text-align: right;
    float: right;

}
.buyBtnDiv{
    background-color:
}

.buyBtn{
    margin: auto;
    display: block;
    background-color: #4CAF50;
    height: 40px;
    width: 160px;
    font-size: 1em;
    border: 0;
    margin-top: 10px;
    margin-bottom: 10px;
    color: #fff;
}


/*-----------------Takk for ditt kjøp------------------------*/

.tickets{
    text-align: left;
    float: left;
}

.qr{
    height: 100px;
    position: relative;
    left: 50px;
}

